<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:orientation="vertical"
    android:padding="@dimen/dp_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/login_bg_border"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_15"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:adjustViewBounds="true"
            android:src="@mipmap/comn_icon_verification_code" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/user_reg_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dp_10"
            android:textColor="@color/text_333"
            android:textColorHint="@color/text_333"
            android:textSize="@dimen/sp_15" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/login_bg_border"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_15"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:adjustViewBounds="true"
            android:src="@mipmap/comn_icon_verification_code" />

        <EditText
            android:id="@+id/repeatPassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/user_reg_repeat_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dp_10"
            android:textColor="@color/text_333"
            android:textColorHint="@color/text_333"
            android:textSize="@dimen/sp_15" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/login_bg_border"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_15"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:adjustViewBounds="true"
            android:src="@mipmap/comn_icon_nickname" />

        <EditText
            android:id="@+id/inviteCode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/user_reg_name"
            android:paddingLeft="@dimen/dp_10"
            android:textColor="@color/text_333"
            android:textColorHint="@color/text_333"
            android:textSize="@dimen/sp_15" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_50"
        android:background="@drawable/login_button_select"
        android:text="@string/user_reg_submit"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15" />
</LinearLayout>