<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:orientation="vertical"
    tools:context=".RegisterFirstUI">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@drawable/login_bg_border"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_15"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:adjustViewBounds="true"
                android:src="@mipmap/comn_icon_phone" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/user_reg_phone"
                android:inputType="number"
                android:maxLength="11"
                android:paddingLeft="@dimen/dp_10"
                android:textColor="@color/text_333"
                android:textColorHint="@color/text_333"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_2"
                android:layout_marginRight="@dimen/dp_20"
                android:background="@drawable/login_button_select"
                android:clickable="true"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingRight="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_5"
                android:text="@string/user_reg_codeinput"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@drawable/login_bg_border"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_15"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:adjustViewBounds="true"
                android:src="@mipmap/comn_icon_verification_code" />

            <EditText
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/user_reg_code"
                android:paddingLeft="@dimen/dp_10"
                android:textColor="@color/text_333"
                android:textColorHint="@color/text_333"
                android:textSize="@dimen/sp_15" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/xieyi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_50"
            android:layout_marginRight="@dimen/dp_10"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/agree"
                android:layout_width="@dimen/dp_15"
                android:layout_height="@dimen/dp_15"
                android:layout_marginLeft="@dimen/dp_10"
                android:src="@mipmap/base_radio_up" />

            <LinearLayout
                android:id="@+id/agreeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="我已阅读"
                    android:textColor="@color/text_333"
                    android:textSize="@dimen/sp_13" />

                <TextView
                    android:id="@+id/userAgreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="用户协议"
                    android:textColor="@color/button_green"
                    android:textSize="@dimen/sp_13"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="和"
                    android:textColor="@color/text_333"
                    android:textSize="@dimen/sp_11" />

                <TextView
                    android:id="@+id/privacyAgreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="隐私协议"
                    android:textColor="@color/button_green"
                    android:textSize="@dimen/sp_13"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/next"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@drawable/login_button_up_hui"
            android:text="@string/user_reg_next"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_15" />
    </LinearLayout>

</LinearLayout>